<resources>
    <string name="app_name">MuscleUp</string>
    <string name="btn_workouts">Workouts</string>
    <string name="btn_exercises">Exercises</string>
    <string name="btn_schedule">Workout Schedule</string>
    <string name="btn_completeWorkout">COMPLETE WORKOUT</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="warning">Warning</string>
    <string name="btn_currentWeek">Current Week</string>
    <string name="text_workoutCompleted">Workout Completed!</string>
    <string name="text_exercisesCompleted">Exercises Completed:</string>
    <string name="btn_back">Back</string>
    <string name="text_levelUp">LEVEL UP!</string>
    <string name="text_completed">Completed</string>
    <string name="text_workoutSessionExpired"> Workout Session Expired: Incomplete</string>
    <string name="btn_goToSchedule">Go To Workout Schedule</string>
    <string name="text_progressReport">Progress Report</string>
    <string name="text_lastWeek">Last 7 Days</string>
    <string name="text_lastMonth">Last 30 Days</string>
    <string name="text_workoutsCompleted">Workouts Completed</string>
    <string name="text_xpGained">XP Gained</string>
    <string name="text_levelsGained">Levels Gained</string>
    <string name="text_recentlyCompletedWorkouts">Recently Completed Workouts</string>
    <string name="text_experienceGained">Total Experience Gained:  +%d XP</string>
    <string name="text_exerciseCollection">Exercise Collection</string>
    <string name="text_workoutCollection">Workout Collection</string>
    <string name="btn_complete">Complete</string>
</resources>
